--- a/IrrigationSystem/ADC_DMA_Timer.ioc
+++ b/IrrigationSystem/ADC_DMA_Timer.ioc
@@ -94,7 +94,7 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=DEBUG_0
+PA3.GPIO_Label=LED_Motor
 PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA3.Locked=true
