--- a/IrrigationSystem/ADC_DMA_Timer.ioc
+++ b/IrrigationSystem/ADC_DMA_Timer.ioc
@@ -46,29 +46,26 @@ Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP5=TIM1
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PA13
 Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
+Mcu.Pin4=PA3
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA7
 Mcu.Pin8=PA9
 Mcu.Pin9=PA10
-Mcu.PinsNb=16
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -87,7 +84,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Signal=ADCx_IN0
@@ -97,8 +93,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.Signal=S_TIM2_CH1_ETR
-PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PA3.GPIO_Label=LED_Motor
 PA3.GPIO_PuPd=GPIO_PULLDOWN
@@ -119,6 +113,8 @@ PA5.GPIO_PuPd=GPIO_PULLDOWN
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA7.Mode=PWM Generation1 CH1N
+PA7.Signal=TIM1_CH1N
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
@@ -166,7 +162,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -191,26 +187,16 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
-SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
-SH.S_TIM2_CH3.ConfNb=1
-TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-PWM Generation3 CH3,Prescaler,Period
-TIM2.Period=200
-TIM2.Prescaler=24
-TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
-TIM3.Period=45000
-TIM3.Prescaler=16
-TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation1 CH1N
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
+TIM1.Period=200
+TIM1.Prescaler=24
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
