--- a/IrrigationSystem/ADC_DMA_Timer.ioc
+++ b/IrrigationSystem/ADC_DMA_Timer.ioc
@@ -1,18 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ExternalTrigConv,master
-ADC1.NbrOfConversion=1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_CC2
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,ExternalTrigConv,master,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -47,82 +50,70 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA3
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA7
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=14
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=PB8
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA0-WKUP
+Mcu.Pin3=PA1
+Mcu.Pin4=PB10
+Mcu.Pin5=PB11
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=5.0.1
-MxDb.Version=DB.5.0.1
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+MxCube.Version=5.2.1
+MxDb.Version=DB.5.0.21
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
+PA1.Signal=ADCx_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=LED_Motor
-PA3.GPIO_PuPd=GPIO_PULLDOWN
-PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA3.Locked=true
-PA3.PinState=GPIO_PIN_RESET
-PA3.Signal=GPIO_Output
-PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
-PA4.GPIO_Label=DEBUG_1
-PA4.GPIO_PuPd=GPIO_PULLDOWN
-PA4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA4.Locked=true
-PA4.PinState=GPIO_PIN_RESET
-PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=DEBUG_2
-PA5.GPIO_PuPd=GPIO_PULLDOWN
-PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA5.Locked=true
-PA5.Signal=GPIO_Output
-PA7.Mode=PWM Generation1 CH1N
-PA7.Signal=TIM1_CH1N
+PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PC13-TAMPER-RTC.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
-PC13-TAMPER-RTC.GPIO_Label=INTERNAL_LED
-PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLDOWN
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.PinState=GPIO_PIN_SET
-PC13-TAMPER-RTC.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
+PB11.Locked=true
+PB11.Signal=S_TIM2_CH4
+PB3.Signal=S_TIM2_CH2
+PB8.GPIOParameters=GPIO_Speed,GPIO_Label
+PB8.GPIO_Label=LED_MOTOR
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103C(8-B)Tx
@@ -162,7 +153,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -187,11 +178,30 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
-TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1N,OCFastMode_PWM-PWM Generation1 CH1N
-TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1N=TIM_OCFAST_ENABLE
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1
 TIM1.Period=200
 TIM1.Prescaler=24
+TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-Output Compare2 CH2,Channel-PWM Generation4 CH4,Prescaler,Period,OCMode_2,Channel-PWM Generation3 CH3,OCPolarity_3,OCFastMode_PWM-PWM Generation3 CH3,OCFastMode_PWM-PWM Generation4 CH4
+TIM2.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_ENABLE
+TIM2.OCFastMode_PWM-PWM\ Generation4\ CH4=TIM_OCFAST_ENABLE
+TIM2.OCMode_2=TIM_OCMODE_TOGGLE
+TIM2.OCPolarity_3=TIM_OCPOLARITY_LOW
+TIM2.Period=22500
+TIM2.Prescaler=16
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
@@ -199,4 +209,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
