--- a/IrrigationSystem/ADC_DMA_Timer.ioc
+++ b/IrrigationSystem/ADC_DMA_Timer.ioc
@@ -57,21 +57,22 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=PB8
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB3
+Mcu.Pin13=PB8
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin4=PA3
+Mcu.Pin5=PB10
+Mcu.Pin6=PB11
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -101,6 +102,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA3.GPIOParameters=GPIO_Speed,GPIO_Label
+PA3.GPIO_Label=DEBUG_ADC_CC
+PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
